<resources>
    <string name="app_name">BTBuoi2</string>

    <string name="hello">Hello</string>
    <string name="again">Again!</string>
    <string name="welcome">Welcome back you’ve\nbeen missed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgePassword">Forgot the password?</string>
    <string name="login">Login</string>
    <string name="orContinueWith">Or continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="font"></string>

</resources>