<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:fontFamily="@font/font"
        android:layout_width="wrap_content"
        android:text="@string/hello"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/font"
        android:layout_width="wrap_content"
        android:text="@string/again"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:layout_height="wrap_content"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp"/>
    <TextView
        android:fontFamily="@font/font"
        android:layout_width="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textColor="@color/hintColor"
        android:layout_height="wrap_content"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="32dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textColor="@color/hintColor"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:text="*"
            android:textColor="@color/error"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp"/>
    <EditText
        android:fontFamily="@font/font"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:lines="1"
        android:background="@drawable/input_border"
        android:layout_height="48dp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textColor="@color/hintColor"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:text="*"
            android:textColor="@color/error"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp"/>
    <EditText
        android:fontFamily="@font/font"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:lines="1"
        android:drawableTint="@color/hintColor"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/eye_hide"
        android:background="@drawable/input_border"
        android:layout_height="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <CheckBox
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginStart="-5dp"
                android:buttonTint="@color/primaryColor"
                android:background="#00FFFFFF"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/font"
                android:text="@string/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/font"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_weight="1"
            android:textColor="@color/primaryColor"
            android:text="@string/forgePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>
    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/font"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="6dp"
        android:backgroundTint="@color/primaryColor"
        android:layout_height="50dp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>
    <TextView
        android:fontFamily="@font/font"
        android:layout_gravity="center"
        android:text="@string/orContinueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textColor="@color/hintColor"
            android:backgroundTint="@color/secondaryColor"
            android:layout_weight="1"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            android:layout_height="48dp">
        </com.google.android.material.button.MaterialButton>
        <Space
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="16dp"/>
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="6dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/hintColor"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:insetBottom="0dp"
            android:backgroundTint="@color/secondaryColor"
            android:insetTop="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/google"
            android:text="@string/google"
            android:layout_height="48dp">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/font"
            android:text="@string/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/primaryColor"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>